# Autonomous-Code-Review-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: .dockerignore  Dockerfile  Dockerfile.worker  docker-compose.dev.yml
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py
src/code_review_agent/: __init__.py  config.py  logging.py  main.py
src/code_review_agent/analysis/: __init__.py  ast_parser.py  bug_predictor.py  security_scanner.py
src/code_review_agent/api/: __init__.py  health.py  webhook_security.py  webhooks.py
src/code_review_agent/core/: __init__.py  engine.py  patch_generator.py  prompts.py  schemas.py
src/code_review_agent/db/: __init__.py  session.py
src/code_review_agent/github/: __init__.py  auth.py  client.py  diff_parser.py  pr_fetcher.py
src/code_review_agent/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/code_review_agent/mcp/: __init__.py  server.py  tools.py  transport.py
src/code_review_agent/memory/: __init__.py  learning.py  review_memory.py
src/code_review_agent/models/: __init__.py  base.py  enums.py  repository.py  review.py
src/code_review_agent/rag/: __init__.py  embeddings.py  indexer.py  retriever.py  standards_loader.py  vector_store.py
src/code_review_agent/sandbox/: __init__.py  analysis_runner.py  docker_sandbox.py
src/code_review_agent/tasks/: __init__.py  celery_app.py  review_tasks.py
tests/: __init__.py  conftest.py  test_health.py
tests/llm/: test_anthropic_provider.py  test_openai_provider.py
